# retrieval-api

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/: cli.py  config.py  errors.py  main.py  schemas.py
app/api/: __init__.py  collections.py  deps.py  documents.py  index.py  search.py  system.py
app/integrations/: embedding_contract.py  embedding_http_client.py  qdrant_client.py
app/mcp/: server.py  tools.py
app/repositories/: migrations.py  sqlite_repository.py
app/services/: chunk_service.py  collection_service.py  document_service.py  search_service.py
app/utils/: hashing.py
docker/: Dockerfile
docs/: api.md  mcp.md
scripts/: smoke_test.py
tests/: conftest.py  test_collection_embedding_contract.py  test_documents_index.py  test_embedding_contract.py  test_search.py  test_sqlite_migrations.py  test_system_collections.py
tests/mcp/: test_http_server.py  test_tool_inventory.py
